--- a/ttpfx的聊天机器人/pages/home/home.wxml
+++ b/ttpfx的聊天机器人/pages/home/home.wxml
@@ -1,6 +1,6 @@
 
 <view class="home_img_container">
-  <image src="http://自己服务器ip/images/壁纸4.png" class="home_img"></image>
+  <image src="http://127.0.0.1:80/images/壁纸4.png" class="home_img"></image>
 </view>
 
 <view class="container">
